# wasm-image-processor

./: .gitignore  Cargo.toml  article.md  next.config.js  package-lock.json  package.json  webpack.config.js
.github/workflows/: main.yml
.husky/: pre-commit
components/: ActionsContainer.tsx  Button.tsx
pages/: _app.tsx  _document.tsx  index.tsx
pkg/: index.d.ts  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts  package.json
public/: main.js
scripts/: install-wasm-pack.sh
src/: lib.rs
utils/: constants.ts
