[package]
name = "ztm-wasm-project"
version = "0.1.0"
authors = ["Ryan Mercadante <ryan.a.mercadante@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.78"

[dependencies.web-sys]
version = "0.3.55"
features = ["console"]